Fix overflow issue in list container

--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,8 @@ input {
 .list ul {
   list-style: none;
   width: 80%;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: hiddem;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
